// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Type Literal Basic properties 1`] = `
"FROM:

        type Test = {
            a: number,
            b: 1,
            c?: string,
            d: string[]
        }
      

--------------------------------------------------------
TO:
'use strict';
exports.__esModule = true;
var runtime_1 = require('@manta-style/runtime');
var Test = runtime_1['default'].TypeAliasDeclaration(
  'Test',
  function(typeFactory) {
    var type = runtime_1['default'].TypeLiteral(function(typeLiteral) {
      typeLiteral.property(
        'a',
        runtime_1['default'].NumberKeyword,
        false,
        runtime_1['default'].MantaAnnotation(''),
      );
      typeLiteral.property(
        'b',
        runtime_1['default'].Literal(1),
        false,
        runtime_1['default'].MantaAnnotation(''),
      );
      typeLiteral.property(
        'c',
        runtime_1['default'].StringKeyword,
        true,
        runtime_1['default'].MantaAnnotation(''),
      );
      typeLiteral.property(
        'd',
        runtime_1['default'].ArrayType(runtime_1['default'].StringKeyword),
        false,
        runtime_1['default'].MantaAnnotation(''),
      );
    });
    return type;
  },
  runtime_1['default'].MantaAnnotation(''),
);
"
`;

exports[`Type Literal Object Indexer 1`] = `
"FROM:

        type Test = {
          [key: string]: number,
          a: string,
        }
      

--------------------------------------------------------
TO:
'use strict';
exports.__esModule = true;
var runtime_1 = require('@manta-style/runtime');
var Test = runtime_1['default'].TypeAliasDeclaration(
  'Test',
  function(typeFactory) {
    var type = runtime_1['default'].TypeLiteral(function(typeLiteral) {
      typeLiteral.computedProperty(
        'key',
        runtime_1['default'].StringKeyword,
        runtime_1['default'].NumberKeyword,
        0,
        false,
        runtime_1['default'].MantaAnnotation(''),
      );
      typeLiteral.property(
        'a',
        runtime_1['default'].StringKeyword,
        false,
        runtime_1['default'].MantaAnnotation(''),
      );
    });
    return type;
  },
  runtime_1['default'].MantaAnnotation(''),
);
"
`;
